# gluon

./: Cargo.toml
codegen-rust/: Cargo.toml
codegen-rust/src/: helpers.rs  lib.rs
codegen-test/: Cargo.toml  build.rs
codegen-test/gluon-binder-src/: org.gluon.Test.gluon  org.gluon.Types.gluon  org.stardustxr.gluon.test.gluon
codegen-test/src/: lib.rs  protocol.rs
codegen-test/src/protocol/: mod.rs  test.rs  types.rs
gluon/: org.stardustxr.gluon.test.gluon
gluon-codegen-rust/: Cargo.toml
gluon-codegen-rust/src/: lib.rs
gluon-parser/src/: lib.rs
gluon-wire/: Cargo.toml
gluon-wire/src/: drop_tracking.rs  lib.rs  primitive_impls.rs
parser/: Cargo.toml
parser/src/: lib.rs
src/: idl_parser.rs  lib.rs
wire/: Cargo.toml
wire-derive/: Cargo.toml
wire-derive/src/: lib.rs
wire/src/: drop_tracking.rs  lib.rs  primitive_impls.rs
