
[workspace]
resolver = "3"
members = ["codegen-test","gluon-codegen-rust", "gluon-wire"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# binderbinder = { path = "../binderbinder" }
binderbinder.git = "https://github.com/technobaboo/binderbinder"
gluon-codegen-rust.path = "./gluon-codegen-rust"
gluon-parser.path = "./gluon-parser"
gluon-wire.path = "./gluon-wire"
