
[workspace]
resolver = "3"
members = ["codegen-test", "codegen-rust", "parser", "wire", "wire-derive"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# binderbinder = { path = "../binderbinder" }
binderbinder.git = "https://github.com/technobaboo/binderbinder"
gluon-codegen-rust.path = "./codegen-rust"
gluon-parser.path = "./parser"
gluon-wire.path = "./wire"
gluon-wire-derive.path = "./wire-derive"

[package]
name = "gluon"
version.workspace = true
edition.workspace = true
