[package]
name = "codegen-test"
version.workspace = true
edition.workspace = true

[dependencies]
binderbinder.workspace = true
gluon-parser.workspace = true
gluon-wire.workspace = true
tokio = "1.49.0"
tracing = { version = "0.1.44", default-features = false }

[build-dependencies]
gluon-codegen-rust.workspace = true
gluon-parser.workspace = true
gluon-wire.workspace = true
convert_case = "0.11.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.117"
